deploy/manifests/grafana-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-routes
  namespace: monitoring-system
spec:
  parentRefs:
  - name: web-gateway
    namespace: default
  hostnames:
  - $PUBLIC_IP
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /grafana
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 80
